--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <h1>Hotel Restoff</h1>
     <nav>
       <a href="index.html">Home</a>
+      <a href="login.html">Contact</a>
       <a href="about.html">About</a>
       <a href="order.html">Order Now</a>
       <a href="contact.html">Contact</a>
