all images added to images folder

--- a/about.html
+++ b/about.html
@@ -46,14 +46,14 @@
       
       <div class="slider">
         <div class="about-image">
-          <img src="hotel.jpeg" alt="Inside Hotel Restoff">
-          <img src="hotel1.jpg" alt="Inside Hotel Restoff">
-          <img src="hotel.jpeg" alt="Inside Hotel Restoff">
-          <img src="hotel1.jpg" alt="Inside Hotel Restoff">
-          <img src="hotel.jpeg" alt="Inside Hotel Restoff">
-          <img src="hotel1.jpg" alt="Inside Hotel Restoff">
-          <img src="hotel.jpeg" alt="Inside Hotel Restoff">
-          <img src="hotel1.jpg" alt="Inside Hotel Restoff">
+          <img src="images/hotel.jpeg" alt="Inside Hotel Restoff">
+          <img src="images/hotel1.jpg" alt="Inside Hotel Restoff">
+          <img src="images/hotel.jpeg" alt="Inside Hotel Restoff">
+          <img src="images/hotel1.jpg" alt="Inside Hotel Restoff">
+          <img src="images/hotel.jpeg" alt="Inside Hotel Restoff">
+          <img src="images/hotel1.jpg" alt="Inside Hotel Restoff">
+          <img src="images/hotel.jpeg" alt="Inside Hotel Restoff">
+          <img src="images/hotel1.jpg" alt="Inside Hotel Restoff">
         </div>
       </div>
     </div>
@@ -65,7 +65,7 @@
     &copy; 2025 Hotel Restoff || All right reserved.
   </footer><br><br>
 
-  <script src="hotel.js"></script>
+  <script src="images/hotel.js"></script>
 </body>
 
 </html>
