--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   <section class="hero">
     <h2 class="typeWriter" id="typeTarget"></h2>
-    <img src="pureveg-log.png" height="95px" width="95px">
+    <img src="images/pureveg-log.png" height="95px" width="95px">
     <p>Experience luxury and comfort at affordable prices.</p><br>
     <a class="btn" href="reservation.html">Reserve table</a><br><br>
     <a class="btn" href="order.html">Book Order Now</a>
@@ -60,17 +60,17 @@
     <h4 id="contact"><strong> You can follow us | OR | Contact US on :</strong></h4><br>
     <nav>
       <div>
-        <a id="contactlogo" href="https://www.instagram.com"><img src="instagram-logo.png" height="50px"
+        <a id="contactlogo" href="https://www.instagram.com"><img src="images/instagram-logo.png" height="50px"
             width="50px"></a>
-        <a id="contactlogo" href="https://www.whatsapp.com"><img src="whatsapp-logo.png" height="50px" width="50px"></a>
-        <a id="contactlogo" href="https://mail.google.com"><img src="mail-logo.png" height="50px" width="50px"></a>
+        <a id="contactlogo" href="https://www.whatsapp.com"><img src="images/whatsapp-logo.png" height="50px" width="50px"></a>
+        <a id="contactlogo" href="https://mail.google.com"><img src="images/mail-logo.png" height="50px" width="50px"></a>
       </div>
     </nav>
   </section><br>
   <footer class="footer"><br>
     &copy; 2025 Hotel Restoff || All right reserved.
   </footer><br><br>
-  <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+  <script src="images/https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
   <script>
     var typed = new Typed("#typeTarget", {
       strings: [
@@ -81,7 +81,7 @@
       loop: true
     });
   </script>
-  <script src="hotel.js"></script>
+  <script src="images/hotel.js"></script>
 
 </body>
 
