all images added to folder images

--- a/about.html
+++ b/about.html
@@ -65,7 +65,7 @@
     &copy; 2025 Hotel Restoff || All right reserved.
   </footer><br><br>
 
-  <script src="images/hotel.js"></script>
+  <script src="hotel.js"></script>
 </body>
 
 </html>
