--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
   <footer class="footer"><br>
     &copy; 2025 Hotel Restoff || All right reserved.
   </footer><br><br>
-  <script src="images/https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+  <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
   <script>
     var typed = new Typed("#typeTarget", {
       strings: [
@@ -81,7 +81,7 @@
       loop: true
     });
   </script>
-  <script src="images/hotel.js"></script>
+  <script src="hotel.js"></script>
 
 </body>
 
