--- a/login.html
+++ b/login.html
@@ -52,6 +52,6 @@
         </div>
     </section>
 
-    <script src="images/first.js"></script>
+    <script src="first.js"></script>
 </body>
 </html>
