--- a/order.html
+++ b/order.html
@@ -581,7 +581,7 @@
   <footer class="footer"><br>
     &copy; 2025 Hotel Restoff || All right reserved.
   </footer><br><br>
-  <script src="images/hotel.js"></script>
+  <script src="hotel.js"></script>
 
 </body>
 
